--- a/netzbooster-model/Snakefile
+++ b/netzbooster-model/Snakefile
@@ -1,38 +1,42 @@
 import numpy as np
 
+
 configfile: "config.yaml"
+
 
 rule preprocess_network:
     input: config["network"]
-    output: "networks/prenetwork_{Co2L}_{snapshots}.nc"
+    output: "networks/prenetwork_Co2L{Co2factor}_sn{n_snapshots}.nc"
     script: "scripts/preprocess_network.py"
-    
+
+
 rule solve_full_contingency:
-    input: "networks/new_inv_co2impact_sn20/prenetwork8_sn20.nc"
-    output: "results/new/postnetwork_full8_{tatl_factor}_sn20.nc"
+    input: "networks/prenetwork_Co2L{Co2factor}_sn{n_snapshots}.nc"
+    output: "results/postnetwork_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.nc"
     threads: 4
     resources: mem= 5000#50000
     script: "scripts/full_contingency_tatl_test.py"
 
 
-    
 rule solve_netzbooster:
-    input: "results/new/postnetwork_full8_{tatl_factor}_sn20.nc"
+    input: "results/postnetwork_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.nc"
     output:
-        P= "results/new/P_netzbooster{tatl_factor}.csv",
-        pos= "results/new/p_pos{tatl_factor}.csv",
-        neg= "results/new/p_neg{tatl_factor}.csv"    
+        P = "results/P_netzbooster_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv",
+        pos = "results/p_pos_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv",
+        neg = "results/p_neg_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv"
     threads: 4
     resources: mem= 50000 #50000
     script: "scripts/netzbooster_seq.py"
+
 
 def tatl_pus():
     cf = config["tatl_factor"]
     return np.round(np.arange(cf["start"], cf["stop"] + cf["step"], cf["step"]),2)
 
+
 rule all:
     input:
-      booster=expand("results/new/P_netzbooster{tatl_factor}.csv", tatl_factor=tatl_pus()),
-      booster_pos=expand("results/new/p_pos{tatl_factor}.csv", tatl_factor=tatl_pus()),
-      booster_neg=expand("results/new/p_neg{tatl_factor}.csv", tatl_factor=tatl_pus()),
-      full=expand("results/new/postnetwork_full8_{tatl_factor}_sn20.nc", tatl_factor=tatl_pus())
+      booster=expand("results/P_netzbooster_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
+      booster_pos=expand("results/p_pos_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
+      booster_neg=expand("results/p_neg_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
+      full=expand("results/postnetwork_Co2L0.1_sn2_tatl{tatlfactor}.nc", tatlfactor=tatl_pus())
