--- a/netzbooster-model/Snakefile
+++ b/netzbooster-model/Snakefile
@@ -34,9 +34,18 @@ def tatl_pus():
     return np.round(np.arange(cf["start"], cf["stop"] + cf["step"], cf["step"]),2)
 
 
+def co2_pus():
+    cf = config["co2_factor"]
+    return np.round(np.arange(cf["start"], cf["stop"] + cf["step"], cf["step"]),2)
+
+
 rule all:
     input:
-      booster=expand("results/P_netzbooster_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
-      booster_pos=expand("results/p_pos_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
-      booster_neg=expand("results/p_neg_Co2L0.1_sn2_tatl{tatlfactor}.csv", tatlfactor=tatl_pus()),
-      full=expand("results/postnetwork_Co2L0.1_sn2_tatl{tatlfactor}.nc", tatlfactor=tatl_pus())
+        booster = expand("results/P_netzbooster_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv",
+                         Co2factor=co2_pus(), n_snapshots=config["n_snapshots"], tatlfactor=tatl_pus()),
+        booster_pos = expand("results/p_pos_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv",
+		                     Co2factor=co2_pus(), n_snapshots=config["n_snapshots"], tatlfactor=tatl_pus()),
+        booster_neg = expand("results/p_neg_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.csv",
+		                     Co2factor=co2_pus(), n_snapshots=config["n_snapshots"], tatlfactor=tatl_pus()),
+        full = expand("results/postnetwork_Co2L{Co2factor}_sn{n_snapshots}_tatl{tatlfactor}.nc",
+		              Co2factor=co2_pus(), n_snapshots=config["n_snapshots"], tatlfactor=tatl_pus())
