--- a/netzbooster-model/config.yaml
+++ b/netzbooster-model/config.yaml
@@ -5,15 +5,9 @@ load_shedding: true
 
 n_snapshots: 50
 
-co2_factor:
-  start: 0.1
-  stop: 0.1
-  step: 0.1
+co2_factor: [.1, .7] #[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
-tatl_factor:
-  start: 1.0
-  stop: 1.5
-  step: 0.1
+tatl_factor: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5]
 
 solver:
   name: gurobi
