--- a/netzbooster-model/config.yaml
+++ b/netzbooster-model/config.yaml
@@ -3,18 +3,18 @@ network: "networks/elec_s_50_ec_lv1.0_Co2L0.1-1H.nc"  #3_bus.nc
 
 load_shedding: true
 
-n_snapshots: 50
+n_snapshots: 150
 
-co2_factor: [.1, .7] #[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
+co2_factor: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
 tatl_factor: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5]
 
 solver:
   name: gurobi
   threads: 4
-  method: 2
+  method: 3
   crossover: 0
-  BarConvTol: 1.e-3
+  BarConvTol: 1.e-4
   FeasibilityTol: 1.e-4
   AggFill: 0
   PreDual: 0
