--- a/sim-netzbooster-model/Snakefile
+++ b/sim-netzbooster-model/Snakefile
@@ -17,8 +17,13 @@ rule netzbooster:
                    "_cost{flex_cost}_tatl{tatlfactor}.csv",
         neg     = "results/p_neg_sclopf_Co2L{Co2factor}_sn{n_snapshots}"+
                   "_cost{flex_cost}_tatl{tatlfactor}.csv"
+    log:
+        mem    = "log/sim_memory_Co2L{Co2factor}_sn{n_snapshots}_cost{flex_cost}"+
+		          "_tatl{tatlfactor}.log",
+        gurobi = "log/sim_gurobi_Co2L{Co2factor}_sn{n_snapshots}_cost{flex_cost}"+
+                  "_tatl{tatlfactor}.log"
     threads: 4
-    resources: mem = 50000
+    resources: mem = 100000
     script: "scripts/netzbooster_sim_tatl.py"
 
 
